# Data-Structures-C-

./: .gitignore  CMakeLists.txt  README.md
HomeWork-1/: CMakeLists.txt  consoleLogger.h  event.h  implementation.cpp  main.cpp  myClient.h  myStore.cpp  myStore.h  priorityQueue.h  queue.h  tests.cpp
HomeWork-1/headers/: event.h  myClient.h  myStore.h  priorityQueue.h
HomeWork-1/source/: myStore.cpp  tests.cpp
HomeWork-2/: CMakeLists.txt  README.md  commands.cpp  commands.h  hierarchy.cpp  interface.h  main.cpp  stringTree.cpp  tests.cpp  tree.cpp  tree.h
HomeWork-2/common/: tests.cpp
HomeWork-2/headers/: Tree.h  commands.h  interface.h  stringTree.h
HomeWork-2/source/: commands.cpp  hierarchy.cpp  stringTree.cpp
HomeWork-3/: CMakeLists.txt  big_data2.txt  hashMap.cpp  hashMap.h  interface.h  main.cpp
HomeWork-3/common/: test.cpp
